// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/PasswordReset should render password reset form successfully 1`] = `
<div
  class="container"
>
  <div>
    Header
  </div>
  <button
    class="resetForm"
    data-testid="submitButton"
  />
  <div>
    Footer
  </div>
</div>
`;

exports[`pages/PasswordReset should render password update form successfully if token provided 1`] = `
<div
  class="container"
>
  <div>
    Header
  </div>
  <button
    class="updateForm"
    data-testid="submitButton"
  />
  <div>
    Footer
  </div>
</div>
`;
